# systems-programming

Assignment1/: CMakeLists.txt
Assignment1/include/: Agent.h  Graph.h  Session.h  Tree.h  json.hpp
Assignment1/src/: Agent.cpp  ContactTracer.cpp  CycleTree.cpp  Graph.cpp  MaxRankTree.cpp  RootTree.cpp  Session.cpp  Tree.cpp  Virus.cpp  main.cpp
Assignment2/: .gitignore
Assignment2/src/main/java/bgu/spl/mics/: Future.java
Assignment2/src/test/java/bgu/spl/mics/: FutureTest.java
Assignment3/: .gitignore
Assignment3/Client/: makefile
Assignment3/Client/include/: connectionHandler.h
Assignment3/Client/src/: BGRSclient.cpp  ServerReadTask.cpp  connectionHandler.cpp
Assignment4/: daos.py  dtos.py  main.py  repository.py
Assingment2/src/main/java/bgu/spl/mics/: MessageBusImpl.java  MicroService.java
Assingment2/src/main/java/bgu/spl/mics/application/: Main.java  Simulator.java  config2.json
Assingment2/src/test/java/bgu/spl/mics/: EwokTest.java  MessageBusImplTest.java
Assingment3/: CMakeLists.txt
Assingment3/Client/include/: KeyboardReadTask.h  ServerReadTask.h
Assingment3/Client/src/: KeyboardReadTask.cpp
Assingment3/spl-net/src/main/java/bgu/spl/net/PassiveObjects/Messages/: Message.java  UsernameData.java
Assingment3/spl-net/src/main/java/bgu/spl/net/Users/: Admin.java  Student.java
Assingment3/spl-net/src/main/java/bgu/spl/net/api/: MessageEncoderDecoderImp.java  MessagingProtocol.java  MessagingProtocolImp.java
Assingment3/spl-net/src/main/java/bgu/spl/net/impl/BGRSServer/: TPCMain.java
(+29 files in other folders)
